--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
             <li><a href="#">Contact</li>
         </ul>
     </nav>
+    <div>
+        <h1>Cover your page </h1>
+        <p>Cover is a one-page template for building simple and beautiful home <br> pages .Download, edit the text, and add your own fullscreen background <br> photo make it your own. </p>
+    </div>
 </body>
 </html>
