--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <ul> <a href="#">Cover</a>
+        <ul> <a class="name" href="#">Cover</a>
             <li><a href="#">Contact</a> </li>
             <li><a href="#"> Features</li>
             <li><a href="#">Contact</li>
@@ -17,6 +17,7 @@
     <div>
         <h1>Cover your page </h1>
         <p>Cover is a one-page template for building simple and beautiful home <br> pages .Download, edit the text, and add your own fullscreen background <br> photo make it your own. </p>
+        <button>Learn more</button>
     </div>
 </body>
 </html>
